# BoxInput

./: .gitmodules  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: lib.cpp  lib.h  log.h
app/src/main/cpp/src/jni/: javaConnector.cpp  javaConnector.h
app/src/main/cpp/src/vulkan/: vkFunctions.cpp  vkFunctions.h  vkInstance.cpp  vkInstance.h  vkMain.cpp  vkMain.h  vkSurface.cpp  vkSurface.h
app/src/main/java/com/cucumbers/boxinput/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
